@@ -84,6 +84,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #21486: Optimize parsing of netmasks in ipaddress.IPv4Network and
+  ipaddress.IPv6Network.
+
 - Issue #13916: Disallowed the surrogatepass error handler for non UTF-*
   encodings.
 
